--- a/index.html
+++ b/index.html
@@ -114,7 +114,7 @@
   <header>
     <nav class="navbar navbar-expand-lg fixed-top">
       <div class="container">
-        <a class="navbar-brand" href="#">GOMBE OIL-RICE jabir hamza adam </a>
+        <a class="navbar-brand" href="#">GOMBE OIL-RICE</a>
         <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navMain" aria-controls="navMain" aria-expanded="false" aria-label="Toggle navigation">
           <span class="navbar-toggler-icon"></span>
         </button>
