--- a/index.html
+++ b/index.html
@@ -200,7 +200,7 @@
             <blockquote class="mt-3">"Our mission is simple: deliver care & quality." — CEO</blockquote>
           </div>
           <div class="col-lg-6">
-            <img src="gomberice2.png" alt="" width="520" height="320" style="border-radius:12px;box-shadow:var(--shadow);width:100%;height:auto" loading="lazy">
+            <img src="gomberice2.jpeg" alt="" width="520" height="320" style="border-radius:12px;box-shadow:var(--shadow);width:100%;height:auto" loading="lazy">
                    </div>
         </div>
       </div>
