--- a/index.html
+++ b/index.html
@@ -386,7 +386,7 @@
 
           <div class="col-6 col-md-4">
             <div class="gallery-item" tabindex="0" data-full="https://images.unsplash.com/photo-1482192505345-5655af888cc4?auto=format&fit=crop&w=1200&q=60" aria-label="Open image 8">
-              <img src="gomberice2.png" alt="">
+              <img src="gomberice99.jpeg" alt="">
               <div class="gallery-caption"><h4>Market</h4></div>
             </div>
           </div>
