--- a/index.html
+++ b/index.html
@@ -344,15 +344,15 @@
 
           <div class="col-6 col-md-4">
             <div class="gallery-item" tabindex="0" data-full="https://images.unsplash.com/photo-1551218808-94e220e084d2?auto=format&fit=crop&w=1200&q=60" aria-label="Open image 2">
-              <img src="gomberice4.png" alt="">
-               <div class="gallery-caption"><h4>oil of small size</h4></div>
+              <img src="gomberice4.jpeg" alt="">
+               <div class="gallery-caption"><h4>Our depot</h4></div>
             </div>
           </div>
 
           <div class="col-6 col-md-4">
             <div class="gallery-item" tabindex="0" data-full="https://images.unsplash.com/photo-1519681393784-d120267933ba?auto=format&fit=crop&w=1200&q=60" aria-label="Open image 3">
               <img src="gomberice5.png" alt="">
-               <div class="gallery-caption"><h4>oil of big size</h4></div>
+               <div class="gallery-caption"><h4>oil</h4></div>
             </div>
           </div>
 
