--- a/index.html
+++ b/index.html
@@ -343,7 +343,7 @@
           </div>
 
           <div class="col-6 col-md-4">
-            <div class="gallery-item" tabindex="0" data-full="https://images.unsplash.com/photo-1551218808-94e220e084d2?auto=format&fit=crop&w=1200&q=60" aria-label="Open image 2">
+            <div class="gallery-item" tabindex="0" data-full="" aria-label="Open image 2">
               <img src="gomberice4.jpeg" alt="">
                <div class="gallery-caption"><h4>Our depot</h4></div>
             </div>
