--- a/index.html
+++ b/index.html
@@ -336,7 +336,7 @@
           <!-- 9 images -->
           <!-- Using Unsplash placeholders for demo -->
           <div class="col-6 col-md-4">
-            <div class="gallery-item" tabindex="0" data-full="https://images.unsplash.com/photo-1501004318641-b39e6451bec6?auto=format&fit=crop&w=1200&q=60" aria-label="Open image 1">
+            <div class="gallery-item" tabindex="0" data-full="" aria-label="Open image 1">
               <img src="gombeoilrice3.png" alt="">
               <div class="gallery-caption"><h4>Rice field sunrise</h4></div>
             </div>
@@ -350,49 +350,49 @@
           </div>
 
           <div class="col-6 col-md-4">
-            <div class="gallery-item" tabindex="0" data-full="https://images.unsplash.com/photo-1519681393784-d120267933ba?auto=format&fit=crop&w=1200&q=60" aria-label="Open image 3">
+            <div class="gallery-item" tabindex="0" data-full="" aria-label="Open image 3">
               <img src="gomberice5.png" alt="">
                <div class="gallery-caption"><h4>oil</h4></div>
             </div>
           </div>
 
           <div class="col-6 col-md-4">
-            <div class="gallery-item" tabindex="0" data-full="https://images.unsplash.com/photo-1473235800703-6c8a4f0f9456?auto=format&fit=crop&w=1200&q=60" aria-label="Open image 4">
+            <div class="gallery-item" tabindex="0" data-full="" aria-label="Open image 4">
               <img src="gomberice7.png" alt="">
               <div class="gallery-caption"><h4>Packing rice</h4></div>
             </div>
           </div>
 
           <div class="col-6 col-md-4">
-            <div class="gallery-item" tabindex="0" data-full="https://images.unsplash.com/photo-1524594154906-6a6a3e2d1d39?auto=format&fit=crop&w=1200&q=60" aria-label="Open image 5">
+            <div class="gallery-item" tabindex="0" data-full="" aria-label="Open image 5">
               <img src="gomberice11.png" alt="">
               <div class="gallery-caption"><h4>Farmers</h4></div>
             </div>
           </div>
 
           <div class="col-6 col-md-4">
-            <div class="gallery-item" tabindex="0" data-full="https://images.unsplash.com/photo-1519985176271-adb1088fa94c?auto=format&fit=crop&w=1200&q=60" aria-label="Open image 6">
+            <div class="gallery-item" tabindex="0" data-full="" aria-label="Open image 6">
               <img src="gomberice10.png" alt="">
               <div class="gallery-caption"><h4>Production side</h4></div>
             </div>
           </div>
 
           <div class="col-6 col-md-4">
-            <div class="gallery-item" tabindex="0" data-full="https://images.unsplash.com/photo-1509460913899-4b29f5f2b8c9?auto=format&fit=crop&w=1200&q=60" aria-label="Open image 7">
+            <div class="gallery-item" tabindex="0" data-full="" aria-label="Open image 7">
              <img src="gomberice6.png" alt="">
               <div class="gallery-caption"><h4>Quality check</h4></div>
             </div>
           </div>
 
           <div class="col-6 col-md-4">
-            <div class="gallery-item" tabindex="0" data-full="https://images.unsplash.com/photo-1482192505345-5655af888cc4?auto=format&fit=crop&w=1200&q=60" aria-label="Open image 8">
+            <div class="gallery-item" tabindex="0" data-full="" aria-label="Open image 8">
               <img src="gomberice99.jpeg" alt="">
               <div class="gallery-caption"><h4>Market</h4></div>
             </div>
           </div>
 
           <div class="col-6 col-md-4">
-            <div class="gallery-item" tabindex="0" data-full="https://images.unsplash.com/photo-1469474968028-56623f02e42e?auto=format&fit=crop&w=1200&q=60" aria-label="Open image 9">
+            <div class="gallery-item" tabindex="0" data-full="" aria-label="Open image 9">
 <img src="gomberice9.png" alt="">
               <div class="gallery-caption"> <h4>Community</h4></div>
             </div>
