--- a/index.html
+++ b/index.html
@@ -444,7 +444,7 @@
           <div class="col-lg-6">
             <h5>Contact Details</h5>
             <p>Phone: <a href="tel:+2349047377687">+234 904 737 7687</a></p>
-            <p>Email: <a href="mailto:info@gombeoilrice.example">info@gombeoilrice.com</a></p>
+            <p>Email: <a href="mailto:abubakarbayero852@gmail.com.example">info@gombeoilrice.com</a></p>
             <p>Address: Gombe, Nigeria</p>
             <p class="muted">Note: If WhatsApp does not open in your browser, use the Email fallback button above.</p>
           </div>
